--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/fontawesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
+
+<div class="preload">
+  <svg id="cc774093-8b64-45c7-8077-699a43d4914b" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="814" height="778.22" viewBox="0 0 814 778.22"><defs><linearGradient id="29b91a8c-5031-4728-9934-4de601869dbd" x1="253.26" y1="778.22" x2="253.26" y2="105.1" gradientUnits="userSpaceOnUse"><stop offset="0.01" stop-color="gray" stop-opacity="0.25"/><stop offset="0.54" stop-color="gray" stop-opacity="0.12"/><stop offset="1" stop-color="gray" stop-opacity="0.1"/></linearGradient><linearGradient id="1256144c-81fa-4390-be21-e94fb20836e2" x1="49.76" y1="202.38" x2="49.76" y2="112.93" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#b3b3b3" stop-opacity="0.25"/><stop offset="0.54" stop-color="#b3b3b3" stop-opacity="0.1"/><stop offset="1" stop-color="#b3b3b3" stop-opacity="0.05"/></linearGradient><linearGradient id="8f0ddb95-6166-4bb1-9b4d-46cd9e3d30e6" x1="408.68" y1="722.31" x2="408.68" y2="49.2" xlink:href="#29b91a8c-5031-4728-9934-4de601869dbd"/><linearGradient id="2acd927f-116a-42d0-926b-2e100ad401a0" x1="205.18" y1="146.48" x2="205.18" y2="57.02" xlink:href="#1256144c-81fa-4390-be21-e94fb20836e2"/><linearGradient id="dd98f1d5-faf2-451f-bb12-7f13808eec29" x1="560.74" y1="673.12" x2="560.74" y2="0" xlink:href="#29b91a8c-5031-4728-9934-4de601869dbd"/><linearGradient id="523444de-12f9-4e88-a28a-f69f2aefc1da" x1="357.24" y1="97.28" x2="357.24" y2="7.83" xlink:href="#1256144c-81fa-4390-be21-e94fb20836e2"/></defs><title>files1</title><polygon points="506.51 778.22 0 778.22 0 189.97 76.53 105.1 506.51 105.1 506.51 778.22" fill="url(#29b91a8c-5031-4728-9934-4de601869dbd)"/><polygon points="498.69 760.33 8.95 760.33 8.95 194.56 82.94 112.93 498.69 112.93 498.69 760.33" fill="#fafafa"/><rect x="56.76" y="182.81" width="238.59" height="40.25" fill="#e0e0e0"/><rect x="57.24" y="292.95" width="174.84" height="40.25" fill="#e0e0e0"/><rect x="57.24" y="458.43" width="392.18" height="147.59" fill="#00b4db"/><rect x="360.55" y="183.37" width="88.87" height="40.25" fill="#f5f5f5"/><rect x="360.55" y="245.99" width="88.87" height="40.25" fill="#f5f5f5"/><polygon points="90.57 112.93 90.57 202.38 8.95 202.38 8.95 194.56 82.74 112.93 90.57 112.93" fill="url(#1256144c-81fa-4390-be21-e94fb20836e2)"/><polygon points="8.75 194.56 82.74 112.93 82.74 194.56 8.75 194.56" fill="#eee"/><polygon points="661.93 722.31 155.42 722.31 155.42 134.06 231.95 49.2 661.93 49.2 661.93 722.31" fill="url(#8f0ddb95-6166-4bb1-9b4d-46cd9e3d30e6)"/><polygon points="654.11 704.42 164.37 704.42 164.37 138.65 238.36 57.02 654.11 57.02 654.11 704.42" fill="#fafafa"/><rect x="212.18" y="126.91" width="238.59" height="40.25" fill="#e0e0e0"/><rect x="212.66" y="237.04" width="174.84" height="40.25" fill="#e0e0e0"/><rect x="212.66" y="402.53" width="392.18" height="147.59" fill="#00b4db"/><rect x="515.97" y="127.47" width="88.87" height="40.25" fill="#f5f5f5"/><rect x="515.97" y="190.08" width="88.87" height="40.25" fill="#f5f5f5"/><polygon points="245.99 57.02 245.99 146.47 164.37 146.47 164.37 138.65 238.16 57.02 245.99 57.02" fill="url(#2acd927f-116a-42d0-926b-2e100ad401a0)"/><polygon points="164.17 138.65 238.16 57.02 238.16 138.65 164.17 138.65" fill="#eee"/><polygon points="814 673.12 307.49 673.12 307.49 84.87 384.01 0 814 0 814 673.12" fill="url(#dd98f1d5-faf2-451f-bb12-7f13808eec29)"/><polygon points="806.17 655.23 316.43 655.23 316.43 89.45 390.43 7.83 806.17 7.83 806.17 655.23" fill="#fff"/><rect x="364.25" y="77.71" width="238.59" height="40.25" fill="#e0e0e0"/><rect x="364.73" y="187.85" width="174.84" height="40.25" fill="#e0e0e0"/><rect x="364.73" y="353.33" width="392.18" height="147.59" fill="#00b4db"/><rect x="668.04" y="78.27" width="88.87" height="40.25" fill="#e0e0e0"/><rect x="668.04" y="140.88" width="88.87" height="40.25" fill="#e0e0e0"/><rect x="668.04" y="203.5" width="88.87" height="40.25" fill="#e0e0e0"/><polygon points="398.06 7.83 398.06 97.28 316.43 97.28 316.43 89.45 390.23 7.83 398.06 7.83" fill="url(#523444de-12f9-4e88-a28a-f69f2aefc1da)"/><polygon points="316.23 89.45 390.23 7.83 390.23 89.45 316.23 89.45" fill="#eee"/></svg>
+  <p>loading....</p>
+</div>
+  
   <section class="homepage" id="homepage">
 
 
@@ -27,6 +33,7 @@
           <a class="nav-item nav-link" href="#about">About</a>
           <a class="nav-item nav-link" href="#language">Knowledge</a>
           <a class="nav-item nav-link" href="#projects">Projects</a>
+          <button class="btn btn-primary nav-item ">Contact me</button>
         </div>
       </div>
     </nav>
@@ -37,19 +44,19 @@
 
         <div class="heading col-12">
           <h1>
-            Front-end Web Developer
+            Front-end Web Developer 
           </h1>
           <p>I code beautifully simple things, and I love what I do.</p>
         </div>
 
         <div class=" avatar col-12">
-          <img src="/mf-avatar.svg" alt="avatar">
+          <img src="images/mf-avatar.svg" alt="avatar">
 
         </div>
 
 
         <div class="homepage-img col-12">
-          <img src="/homepage.svg">
+          <img src="images/homepage.svg">
         </div>
 
       </div>
@@ -82,7 +89,7 @@
     <div class="info">
       <div class="info-row row">
         <div class="col-12 col-sm-6 ">
-          <img src="frontend.svg" alt="">
+          <img src="images/frontend.svg" alt="">
           <div class="row">
             <div class="col-12 space">
               <h3>Front-end Developer</h3>
@@ -120,7 +127,7 @@
 
         </div>
         <div class="col-12 col-sm-6">
-          <img src="backend.svg" alt="">
+          <img src="images/backend.svg" alt="">
 
           <div class="row">
             <div class="col-12 space">
@@ -171,7 +178,7 @@
         <div class="card-columns">
 
           <div class="project-div card bg-dark text-white">
-            <img class="card-img" src="/Blog-page.jpeg" alt="Card image">
+            <img class="card-img" src="images/Blog-page.jpeg" alt="Card image">
             <div class="card-img-overlay">
               <h3 class="card-title">Blog Page</h3>
               <p class="card-text">Blog Page site made by node.js/express+MongoDB</p>
@@ -190,7 +197,7 @@
           </div>
 
           <div class="project-div card bg-dark text-white">
-            <img class="card-img" src="/jedlo.jpeg" alt="Card image">
+            <img class="card-img" src="images/jedlo.jpeg" alt="Card image">
             <div class="card-img-overlay">
               <h3 class="card-title">Jedlo</h3>
               <p class="card-text">LOcal Food Delivery Site made by bootstarp</p>
@@ -209,7 +216,7 @@
           </div>
 
           <div class="project-div card bg-dark text-white">
-            <img class="card-img" src="/tic-tac-toe.jpeg" alt="Card image">
+            <img class="card-img" src="images/tic-tac-toe.jpeg" alt="Card image">
             <div class="card-img-overlay">
               <h3 class="card-title">Tic Tac Toe</h3>
               <p class="card-text">Your favorite tic-tac-toe game made with React.js</p>
@@ -228,7 +235,7 @@
           </div>
 
           <div class="project-div card bg-dark text-white">
-            <img class="card-img" src="/weather.jpeg" alt="Card image">
+            <img class="card-img" src="images/weather.jpeg" alt="Card image">
             <div class="card-img-overlay">
               <h3 class="card-title">Weather App</h3>
               <p class="card-text">Wanna check weather? Here is the app including API</p>
@@ -246,7 +253,7 @@
           </div>
 
           <div class="project-div card bg-dark text-white">
-            <img class="card-img" src="/react-keeper.jpeg" alt="Card image">
+            <img class="card-img" src="images/react-keeper.jpeg" alt="Card image">
             <div class="card-img-overlay">
               <h3 class="card-title">Google Keeper Clone</h3>
               <p class="card-text">Clone of Google Keeper app made with React</p>
@@ -264,7 +271,7 @@
           </div>
 
           <div class="project-div card bg-dark text-white">
-            <img class="card-img" src="/node-todolist.jpeg" alt="Card image">
+            <img class="card-img" src="images/node-todolist.jpeg" alt="Card image">
             <div class="card-img-overlay">
               <h3 class="card-title">To-Do-List</h3>
               <p class="card-text">Keep track of your list HINT:-Add your name in last of URL</p>
@@ -329,7 +336,6 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js" integrity="sha256-XBVALc3QsDSQiDtiaBwNZ2rxCJTHzlUhhlDQ84J8bw8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/CSSRulePlugin.js" integrity="sha256-tn6ZPy5AIkyQOuXs5FS7DscimqG7DwHZMKZhGZJF08c=" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/8b41a163ea.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -342,6 +348,6 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
   </script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
-  <script src="app.js" charset="utf-8"></script>
+  <script src="js/app.js" charset="utf-8"></script>
 </body>
 </html>
