Contact page added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a class="nav-item nav-link" href="#about">About</a>
           <a class="nav-item nav-link" href="#language">Knowledge</a>
           <a class="nav-item nav-link" href="#projects">Projects</a>
-          <button class="btn btn-primary nav-item ">Contact me</button>
+          <button class="btn btn-primary nav-item " onclick="location.href = 'contact.html'">Contact me</button>
         </div>
       </div>
     </nav>
@@ -308,7 +308,7 @@
             <p>Interested in working together? We should queue up a chat. I’ll buy the coffee.</p>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <button class="btn btn-outline-dark">Lets Do This</button>
+            <button class="btn btn-outline-dark" onclick="location.href = 'contact.html'">Lets Do This</button>
           </div>
         </div>
       </div>
