--- a/index.html
+++ b/index.html
@@ -22,19 +22,27 @@
   <section class="homepage" id="homepage">
 
 
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand title " href="#">Nakul</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+    <div class="dark-mode">
+
+      <svg  width="55" height="55" viewBox="0 0 85 85" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path class="sun" d="M85 42.5C85 65.9721 65.9721 85 42.5 85C19.0279 85 0 65.9721 0 42.5C0 19.0279 19.0279 0 42.5 0C65.9721 0 85 19.0279 85 42.5Z" fill="#FFC700"/>
+        </svg>
+
+            </div>
+
+    <nav class="navbar navbar-expand-lg towhite">
+      <a class="navbar-brand title towhite" href="#">Nakul</a>
+      <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto menu" id="menu">
-          <a class="nav-item nav-link active" href="#">Home </a>
-          <a class="nav-item nav-link" href="#about">About</a>
-          <a class="nav-item nav-link" href="#language">Knowledge</a>
-          <a class="nav-item nav-link" href="#projects">Projects</a>
-          <button class="btn btn-primary nav-item " onclick="location.href = 'contact.html'">Contact me</button>
+          <a class="nav-item nav-link towhite active" href="#">Home </a>
+          <a class="nav-item nav-link towhite" href="#about">About</a>
+          <a class="nav-item nav-link towhite" href="#language">Knowledge</a>
+          <a class="nav-item nav-link towhite" href="#projects">Projects</a>
+          <button class="btn btn-primary nav-item" onclick="location.href = 'contact.html'">Contact me</button>
         </div>
       </div>
     </nav>
@@ -43,7 +51,7 @@
     <div class="main container timeline1">
       <div class="row">
 
-        <div class="heading col-12">
+        <div class="heading col-12 towhite">
           <h1>
             Front-end Web Developer
           </h1>
@@ -51,13 +59,13 @@
         </div>
 
         <div class=" avatar col-12">
-          <img src="images/mf-avatar.svg" alt="avatar">
+          <img class="dava" src="images/mf-avatar.svg" alt="avatar">
 
         </div>
 
 
         <div class="homepage-img col-12">
-          <img src="images/homepage.svg">
+          <img class="dhome" src="images/homepage.svg">
         </div>
 
       </div>
@@ -68,7 +76,7 @@
   <section class="about" id="about">
 
 
-    <div class="profile">
+    <div class="profile toblack">
       <div class="profile-container">
         <div class="details container-fluid">
           <h3>Hi, I’m Nakul. Nice to meet you.</h3>
@@ -92,11 +100,11 @@
         <div class="col-12 col-sm-6 ">
           <img src="images/frontend.svg" alt="">
           <div class="row">
-            <div class="col-12 space">
+            <div class="col-12 space ">
               <h3>Front-end Developer</h3>
             </div>
             <div class="col-12 space">
-              <div class="container-fluid">
+              <div class="container-fluid ">
                 <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser. <br /> &nbsp;
                 </p>
               </div>
@@ -110,7 +118,7 @@
             </div>
             <div class="col-12 space">
               <h4>Frameworks i love too use..</h4>
-              <div class="container-fluid">
+              <div class="container-fluid ">
                 <ul>
                   <li>React</li>
                   <li>Gsap</li>
@@ -131,11 +139,11 @@
           <img src="images/backend.svg" alt="">
 
           <div class="row">
-            <div class="col-12 space">
+            <div class="col-12 space ">
               <h3>Back-end Developer</h3>
             </div>
             <div class="col-12 space">
-              <div class="container-fluid">
+              <div class="container-fluid ">
                 <p>I do understand that a website can not stand on internet without Database so i do have knowledge in
                   backend technology </p>
               </div>
@@ -143,13 +151,13 @@
             </div>
             <div class="col-12 space">
               <h4>Site Supporter</h4>
-              <div class="container-fluid">
+              <div class="container-fluid ">
                 <p>MongoDB , Mongoose , Sql , Firebase</p>
               </div>
             </div>
             <div class="col-12 space">
               <h4>Dev Tools</h4>
-              <div class="container-fluid">
+              <div class="container-fluid ">
                 <ul>
                   <li>Atom</li>
                   <li>Visual Studio code</li>
@@ -171,7 +179,7 @@
   </section>
 
   <section class="projects" id="projects">
-    <div class="project">
+    <div class="project towhite">
       <h2>Recent Works</h2>
       <p>Here are a few design projects I've worked on recently. Want to see more? <a
           href="mailto:jhunjhunwalanakul@gmail.com">Email me.</a></p>
@@ -297,7 +305,7 @@
 
 
 
-  <section class="footer">
+  <section class="footer toblack">
     <section class="contact">
       <div class="contact-detail">
         <div class="row">
@@ -314,7 +322,7 @@
       </div>
     </section>
 
-    <div class="motive">
+    <div class="motive towhite">
       <div class="saying">
         <h4>Living, learning, & leveling up one day at a time.</h4>
       </div>
@@ -322,14 +330,14 @@
 
     <div class="clogo">
       <div class="icons">
-        <div class="icon-circle" onclick="location.href ='mailto:jhunjhunwalanakul@gmail.com"><i class="fas fa-envelope fa-sm"></i></div>
+        <div class="icon-circle" onclick="location.href ='mailto:jhunjhunwalanakul@gmail.com'"><i class="fas fa-envelope fa-sm"></i></div>
         <div class="icon-circle" onclick="location.href ='tel:8856020006'"> <i class="fas fa-phone-alt fa-sm"></i></div>
         <div class="icon-circle" onclick="location.href ='https://www.instagram.com/nakuljhunjhunwala/'"><i class="fab fa-instagram fa-sm"></i></div>
         <div class="icon-circle" onclick="location.href ='https://github.com/nakuljhunjhunwala/'"> <i class="fab fa-github fa-sm"></i></div>
       </div>
     </div>
 
-    <div class="copyright">
+    <div class="copyright towhite">
       <p>Handcrafted By me &copy; Nakul Jhunjhunwala</p>
     </div>
   </section>
@@ -351,6 +359,7 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+  <script src="js/anime.min.js"></script>
   <script src="js/app.js" charset="utf-8"></script>
 </body>
 
